--- a/account_reversal/i18n/am.po
+++ b/account_reversal/i18n/am.po
@@ -1,17 +1,5 @@
-# Translation of OpenERP Server.
+# Translation of Odoo Server.
 # This file contains the translation of the following modules:
-<<<<<<< HEAD
-# 	* account_reversal
-#
-msgid ""
-msgstr ""
-"Project-Id-Version: OpenERP Server 7.0\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-10-18 17:51+0000\n"
-"PO-Revision-Date: 2015-01-06 19:44+0100\n"
-"Last-Translator: Rudolf Schnapka <rs@techno-flex.de>\n"
-"Language-Team: \n"
-=======
 # * account_reversal
 # 
 # Translators:
@@ -23,45 +11,22 @@ msgstr ""
 "POT-Creation-Date: 2017-05-30 00:47+0000\n"
 "PO-Revision-Date: 2017-05-30 00:47+0000\n"
 "Last-Translator: OCA Transbot <transbot@odoo-community.org>, 2017\n"
-"Language-Team: German (https://www.transifex.com/oca/teams/23907/de/)\n"
->>>>>>> 61f809e8... [10.0][MIG] account_reversal migration (#445)
+"Language-Team: Amharic (https://www.transifex.com/oca/teams/23907/am/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-"Language: de\n"
-"X-Generator: Poedit 1.5.4\n"
+"Content-Transfer-Encoding: \n"
+"Language: am\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #. module: account_reversal
-#: field:account.move.reverse,move_line_prefix:0
-msgid "Items Name Prefix"
-msgstr "Elementnamen-Präfix"
+#: model:ir.model,name:account_reversal.model_account_move
+msgid "Account Entry"
+msgstr "Asiento contable"
 
 #. module: account_reversal
-<<<<<<< HEAD
-#: field:account.move.reverse,period_id:0
-msgid "Reversal Period"
-msgstr "Umkehrperiode"
-
-#. module: account_reversal
-#: view:account.move.reverse:0
-#: model:ir.actions.act_window,name:account_reversal.act_account_move_reverse
-msgid "Reverse Entries"
-msgstr "Umkehrbuchungen"
-
-#. module: account_reversal
-#: help:account.move.reverse,move_line_prefix:0
-msgid ""
-"Prefix that will be added to the name of the journal item to be reversed to "
-"create the name of the reversal journal item (a space is added after the "
-"prefix)."
-msgstr ""
-"Präfix, welches dem Namen des umzukehrenden Journalelements vorangestellt "
-"wird, um diesen Umkehrbuchung zu benennen (es wird ein Leerzeichen an das "
-"Präfix angehängt)"
-=======
 #: model:ir.ui.view,arch_db:account_reversal.view_account_move_reverse
 msgid "Cancel"
-msgstr "Abbrechen"
+msgstr "Cancelar"
 
 #. module: account_reversal
 #: model:ir.model.fields,help:account_reversal.field_account_move_to_be_reversed
@@ -71,54 +36,27 @@ msgstr ""
 #. module: account_reversal
 #: model:ir.ui.view,arch_db:account_reversal.view_account_move_reverse
 msgid "Create reversal journal entries"
-msgstr "Lege Journal-Umkehrbuchungen an"
->>>>>>> 61f809e8... [10.0][MIG] account_reversal migration (#445)
+msgstr "Crear inversos de los asientos contables"
 
 #. module: account_reversal
-#: help:account.move.reverse,period_id:0
-msgid "If empty, take the period of the date."
-msgstr "Wenn leer, wird die Periode des Datums verwendet."
+#: model:ir.model,name:account_reversal.model_account_move_reverse
+msgid "Create reversal of account moves"
+msgstr "Crear inversos de los asientos contables"
 
 #. module: account_reversal
-<<<<<<< HEAD
-#: help:account.move,to_be_reversed:0
-msgid "Check this box if your entry has to bereversed at the end of period."
-msgstr "Wähle diese Box an, wenn Ihr Journal am Periodenende umgekehrt werden muss."
-
-#. module: account_reversal
-#: field:account.move.reverse,journal_id:0
-msgid "Reversal Journal"
-msgstr "Umkehr-Journal"
-
-#. module: account_reversal
-#: view:account.move:0 field:account.move,to_be_reversed:0
-msgid "To Be Reversed"
-msgstr "Umzukehren"
-
-#. module: account_reversal
-#: help:account.move.reverse,journal_id:0
-msgid "If empty, uses the journal of the journal entry to be reversed."
-msgstr "Wenn leer, wird das Journal des Journaleintrags zur Umkehr."
-
-#. module: account_reversal
-#: view:account.move.reverse:0
-msgid ""
-"This will create reversal for all selected entries whether checked 'to be "
-"reversed' or not."
-=======
 #: model:ir.model.fields,field_description:account_reversal.field_account_move_reverse_create_uid
 msgid "Created by"
-msgstr "Erstellt von"
+msgstr "Creado por"
 
 #. module: account_reversal
 #: model:ir.model.fields,field_description:account_reversal.field_account_move_reverse_create_date
 msgid "Created on"
-msgstr "Erstellt am"
+msgstr "Creado en"
 
 #. module: account_reversal
 #: model:ir.model.fields,field_description:account_reversal.field_account_move_reverse_display_name
 msgid "Display Name"
-msgstr "Anzeigename"
+msgstr ""
 
 #. module: account_reversal
 #: model:ir.model.fields,help:account_reversal.field_account_move_reverse_date
@@ -132,42 +70,12 @@ msgstr ""
 msgid ""
 "Enter the date of the reversal account entries. If empty, Odoo uses the same"
 " journal of the move to reverse."
->>>>>>> 61f809e8... [10.0][MIG] account_reversal migration (#445)
 msgstr ""
-"Dies wird für alle ausgewählten Buchungen eine Umkehr anlegen, ob "
-"'Umzukehren' ausgewählt oder nicht."
 
 #. module: account_reversal
-<<<<<<< HEAD
-#: model:ir.model,name:account_reversal.model_account_move_reverse
-msgid "Create reversal of account moves"
-msgstr "Erzeuge Konto-Umkehrbuchungen"
-
-#. module: account_reversal
-#: code:addons/account_reversal/wizard/account_move_reverse.py:108
-#, python-format
-msgid "Reversal Entries"
-msgstr "Umkehrbuchungen"
-
-#. module: account_reversal
-#: view:account.move.reverse:0
-msgid "Create reversal journal entries"
-msgstr "Lege Journal-Umkehrbuchungen an"
-
-#. module: account_reversal
-#: field:account.move,reversal_id:0
-msgid "Reversal Entry"
-msgstr "Umkehrbuchung"
-
-#. module: account_reversal
-#: help:account.move.reverse,date:0
-msgid ""
-"Enter the date of the reversal account entries. By default, OpenERP proposes "
-"the first day of the next period."
-=======
 #: model:ir.model.fields,field_description:account_reversal.field_account_move_reverse_move_prefix
 msgid "Entries Ref. Prefix"
-msgstr "Ref.-Präfix des Eintrags"
+msgstr "Prefijo para la referencia"
 
 #. module: account_reversal
 #: model:ir.model.fields,field_description:account_reversal.field_account_move_reverse_id
@@ -177,62 +85,38 @@ msgstr "ID"
 #. module: account_reversal
 #: model:ir.model.fields,field_description:account_reversal.field_account_move_reverse_line_prefix
 msgid "Items Name Prefix"
-msgstr "Elementnamen-Präfix"
+msgstr "Prefijo para el nombre del apunte"
 
 #. module: account_reversal
 #: model:ir.actions.act_window,name:account_reversal.action_move_to_be_reversed
 #: model:ir.ui.menu,name:account_reversal.menu_move_to_be_reversed
 #: model:ir.ui.view,arch_db:account_reversal.view_account_move_filter
 msgid "Journal Entries to be Reversed"
-msgstr "Umzukehrende Journalbuchungen"
+msgstr "Asientos contables a invertir"
 
 #. module: account_reversal
 #: model:ir.model.fields,field_description:account_reversal.field_account_move_reverse___last_update
 msgid "Last Modified on"
-msgstr "Zuletzt geändert am"
+msgstr ""
 
 #. module: account_reversal
 #: model:ir.model.fields,field_description:account_reversal.field_account_move_reverse_write_uid
 msgid "Last Updated by"
-msgstr "Zuletzt geändert von"
+msgstr "Última actualización por"
 
 #. module: account_reversal
 #: model:ir.model.fields,field_description:account_reversal.field_account_move_reverse_write_date
 msgid "Last Updated on"
-msgstr "Zuletzt geändert am"
+msgstr "Última actualización en"
 
 #. module: account_reversal
 #: model:ir.model.fields,help:account_reversal.field_account_move_reverse_reconcile
 msgid "Mark this if you want to reconcile items of both moves."
->>>>>>> 61f809e8... [10.0][MIG] account_reversal migration (#445)
 msgstr ""
-"Geben Sie das Datum der Konto-Umkehrbuchung an. Per Vorgabe wählt OpenERP "
-"den ersten Tag der nächsten Periode."
 
 #. module: account_reversal
 #: model:ir.model.fields,help:account_reversal.field_account_move_reverse_line_prefix
 msgid ""
-<<<<<<< HEAD
-"Prefix that will be added to the 'Ref' of the journal entry to be reversed "
-"to create the 'Ref' of the reversal journal entry (no space added after the "
-"prefix)."
-msgstr ""
-"Präfix, welches der 'Ref' des umzukehrenden Journaleintrag vorangestellt "
-"wird, um den 'Ref' des Umkehrjournaleintrags anzulegen (kein Leerzeichen "
-"nach dem Präfix)."
-
-#. module: account_reversal
-#: model:ir.model,name:account_reversal.model_account_move
-msgid "Account Entry"
-msgstr "Kontobuchung"
-
-#. module: account_reversal
-#: view:account.move:0
-#: model:ir.actions.act_window,name:account_reversal.action_move_to_be_reversed
-#: model:ir.ui.menu,name:account_reversal.menu_move_to_be_reversed
-msgid "Journal Entries to be Reversed"
-msgstr "Umzukehrende Journalbuchungen"
-=======
 "Prefix that will be added to the 'Name' of the reversal account entrie "
 "items. If empty, Odoo uses the same name of the move line to reverse. (NOTE:"
 " A space is added after the prefix)."
@@ -245,46 +129,32 @@ msgid ""
 "empty, Odoo uses the Ref of the move to reverse. (NOTE: A space is added "
 "after the prefix)."
 msgstr ""
->>>>>>> 61f809e8... [10.0][MIG] account_reversal migration (#445)
 
 #. module: account_reversal
 #: model:ir.model.fields,field_description:account_reversal.field_account_move_reverse_reconcile
 msgid "Reconcile"
-msgstr "Ausgleichen"
+msgstr ""
 
 #. module: account_reversal
-<<<<<<< HEAD
-#: field:account.move.reverse,move_prefix:0
-msgid "Entries Ref. Prefix"
-msgstr "Ref.-Präfix des Eintrags"
-
-#. module: account_reversal
-#: view:account.move.reverse:0
-msgid "Cancel"
-msgstr "Abbrechen"
-
-#. module: account_reversal
-#: view:account.move.reverse:0
-=======
 #: model:ir.model.fields,field_description:account_reversal.field_account_move_reverse_date
 msgid "Reversal Date"
-msgstr "Umkehrdatum"
+msgstr "Fecha"
 
 #. module: account_reversal
 #: model:ir.model.fields,field_description:account_reversal.field_account_move_reversal_id_3707
 msgid "Reversal Entry"
-msgstr "Umkehrbuchung"
+msgstr "Asiento inverso"
 
 #. module: account_reversal
 #: model:ir.model.fields,field_description:account_reversal.field_account_move_reverse_journal_id
 msgid "Reversal Journal"
-msgstr "Umkehr-Journal"
+msgstr "Diario"
 
 #. module: account_reversal
 #: model:ir.actions.act_window,name:account_reversal.act_account_move_reverse
 #: model:ir.ui.view,arch_db:account_reversal.view_account_move_reverse
 msgid "Reverse Entries"
-msgstr "Umkehrbuchungen"
+msgstr "Asientos inversos"
 
 #. module: account_reversal
 #: code:addons/account_reversal/wizard/account_move_reverse.py:59
@@ -298,14 +168,14 @@ msgid ""
 "This will create reversal for all selected entries whether checked 'to be "
 "reversed' or not."
 msgstr ""
-"Dies wird für alle ausgewählten Buchungen eine Umkehr anlegen, ob "
-"'Umzukehren' ausgewählt oder nicht."
+"Esto creará el inverso para todos los asientos seleccionados "
+"independientemente de si tienen la casilla \"Para ser invertido\" marcada."
 
 #. module: account_reversal
 #: model:ir.model.fields,field_description:account_reversal.field_account_move_to_be_reversed
 #: model:ir.ui.view,arch_db:account_reversal.view_account_move_filter
 msgid "To Be Reversed"
-msgstr "Umzukehren"
+msgstr "Para ser invertido"
 
 #. module: account_reversal
 #: code:addons/account_reversal/models/account_move.py:57
@@ -315,6 +185,5 @@ msgstr ""
 
 #. module: account_reversal
 #: model:ir.ui.view,arch_db:account_reversal.view_account_move_reverse
->>>>>>> 61f809e8... [10.0][MIG] account_reversal migration (#445)
 msgid "or"
-msgstr "oder"
+msgstr "o"
